fixed text align

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,8 +1,12 @@
 .table {
     border-collapse: collapse;
-    text-align: center;
     margin-top: 5px;
 }
+
+.center-align-table {
+    text-align: center;
+}
+
 .table > tr > td,
 .table > tr > th {
     border: 1px solid black;
